--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body{
     margin: 30px 0;
     font-weight: 500;
     font-size: 1em;
-    color: hsl(275, 9%, 75%);
+    color: hsl(303, 10%, 53%);
     line-height: 1.4em;
 }
 
@@ -212,8 +212,13 @@ body{
         font-size: .6em;
     }
 
+    .inner-wrapper-b p{
+        font-size: .7em;
+    }
+
     .inner-wrapper-b{
-        grid-auto-rows: minmax(50px, auto);
+        grid-auto-rows: minmax(30px, auto);
+        
 
     }
 
@@ -223,12 +228,16 @@ body{
 
     .review-sec-a{
         grid-column: 1/5;
-        
+        position: relative;
+        bottom: 25px;
       
     }
 
     .review-sec-b{
         grid-column: 5/9;
+        position: relative;
+        bottom: 10px;
+        
        
     }
 
